<?xml version="1.0"?>
<package format="2">
  <name>ldlidar_stl_ros</name>
  <version>0.0.0</version>
  <description>The ldlidar package</description>

  <maintainer email="support@ldrobot.com">SHENZHEN LDROBOT CO., LTD.</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>tf</exec_depend>

</package>
